fix overflow

--- a/src/Components/Landing.css
+++ b/src/Components/Landing.css
@@ -11,6 +11,7 @@
 }
 .RenderWindow
 {
+    overflow-y: hidden;
     position:relative;
     text-align: center;
     height: 100%;
